--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>vaccine centre finder</title>
 	<link rel="stylesheet" type="text/css" href="./style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-  
+  <link rel="icon" type="image/png" href="https://images.app.goo.gl/4a9soQBjJmo236TLA">
 </head>
 <body >
   <div  style="display: flex;justify-content: center; margin-bottom: 25px;">
